<resources>
    <string name="app_name">Calendar</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="insert_event">insert event</string>
    <string name="delete_all">delete all</string>
    <string name="pick_date">Pick date</string>
    <string name="save">Save</string>
    <string name="title_activity_add_event">Add event</string>
    <string name="delete_all_events">Delete all events</string>
    <string name="add_event">Add event</string>
    <string name="edit_event_title_hint">write titles, people and places…</string>
    <string name="edit_event_title_label">Title</string>
    <string name="add_description">Add description</string>
    <string name="title_activity_day">DayActivity</string>
    <string name="daily">Daily</string>
    <string name="title_activity_add_task">Add task</string>
    <string name="add_task">Add task</string>
    <string name="edit_task_title_label">Title</string>
    <string name="edit_task_title_hint">write assignments…</string>
    <string name="weekly">For a week</string>
    <string name="select_week">Select week</string>
    <string name="linked_to_event">Linked to event</string>
    <string name="title_activity_pending_tasks">Pending tasks</string>
    <string name="pending_tasks">Pending tasks</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="about_text">
        Calendar lets you easily organize your week. You can add events associated to
        a date and time, or you can manage your pending tasks.\n\nThis app was developed as a project
        for the Interaction and Interface Design course imparted at the Barcelona School of
        Informatics.\n\n\nCrafted with ♥ in Barcelona.
    </string>
</resources>
