<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/pick_date"
        android:title="@string/pick_date"
        android:orderInCategory="10"
        android:icon="@drawable/ic_today_white_48dp"
        app:showAsAction="always" />

    <item android:id="@+id/add_event"
        android:title="@string/add_event"
        android:orderInCategory="20"
        android:icon="@drawable/ic_add_box_white_48dp"
        app:showAsAction="always" />

    <item android:id="@+id/add_task"
        android:title="@string/add_task"
        android:orderInCategory="30"
        android:icon="@drawable/ic_assignment_white_48dp"
        app:showAsAction="always"/>

    <item android:id="@+id/pending_tasks"
        android:title="@string/pending_tasks"
        android:orderInCategory="40"
        app:showAsAction="never" />

    <item android:id="@+id/delete_all_events"
        android:title="@string/delete_all_events"
        android:orderInCategory="50"
        app:showAsAction="never" />

    <item android:id="@+id/help"
        android:title="@string/help"
        android:orderInCategory="60"
        app:showAsAction="never" />

    <item android:id="@+id/about"
        android:title="@string/about"
        android:orderInCategory="70"
        app:showAsAction="never" />

</menu>
