<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="oscmansan.calendar.AddTaskActivity"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_task_title_label"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/edit_task_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:inputType="text|textCapSentences"
            android:hint="@string/edit_task_title_hint"
            android:textSize="18sp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/edit_task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:minLines="3"
        android:hint="@string/add_description"
        android:gravity="start"
        android:inputType="textCapSentences|textMultiLine"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="start">

        <RadioButton
            android:id="@+id/daily_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekly"
            android:layout_marginStart="20dp"/>

    </RadioGroup>

    <LinearLayout
        android:id="@+id/select_week_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:visibility="gone" >

        <TextView
            android:text="@string/select_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/select_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="18sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"/>

</LinearLayout>
